# Quafel-PSE-2024

./: .codestyle.xml  .editorconfig  .gitignore  .gitmodules  .pylintrc  HardwareProfile.Dockerfile  README.md  ServerSide.Dockerfile  compose.yaml  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
doc/: PflichtenheftKriterien.txt  tools.txt
dockerfile/: OutputServer.Dockerfile  Test.Dockerfile  Webapp.Dockerfile
meetings/: Entwurf QuafelWeb.pptx
proto/: manage.py
proto/main/: views.py
proto/proto/: asgi.py  settings.py  urls.py  wsgi.py
quafel_simulators/: hardware_base.py  output.py  quafelsubmitter.py  runner.py  simulation_base.py  simulation_request.py  simulators.py  submitter.py  tests.py
quafel_simulators/base/: hardware.py  simulation_request.py
quafel_simulators/tests/: .gitignore  connection_tests.py  json_handler_tests.py  quafel_test_yml.yml  quafelsubmitter_tests.py  simulators_tests.py  test_script_run.bash  test_script_run.sh  test_script_setup.bash  test_script_setup.sh  tests.py  util.py
quafel_simulators/util/: connection.py  json_handler.py  pull_output.bash  script_builder.py
quafelweb/: README.md  manage.py  mydatabase  output.json
quafelweb/account_controller/: .gitignore  apps.py  authenticate.py  kitopenid.py  manager.py  models.py  urls.py  views.py
quafelweb/admin/: urls.py
quafelweb/functional_tests/: account_tests.py  hardware_tests.py
quafelweb/hardware_controller/: apps.py  models.py  urls.py  views.py
quafelweb/quafel_simulators/: cluster.py  manager.py  (+4 more)
source/: TeSt.py  Test.py
(+211 files in other folders)
