[tool.poetry]
name = "quafel-pse-2024"
version = "0.1.0"
description = ""
authors = ["Nils Prommersberger <nils.prommersberger@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
django = "^5.0.6"
django-db = "^0.0.7"
pylint = "^3.2.3"
postgres = "^4.0"
plotly = "^5.22.0"
pandas = "^2.2.2"
authlib = "^1.3.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
