
[tool.poetry]
name = "quafel-pse-2024"
version = "0.1.0"
description = ""
authors = ["Nils Prommersberger <nils.prommersberger@icloud.com>"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-db = "^0.0.7"
pylint = "^3.2.3"
postgres = "^4.0"
authlib = "^1.3.1"
requests = "^2.32.3"
paramiko = "^3.4.0"
pyyaml = "^6.0.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
